welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:35: error: '(' expected but identifier found.
  for j <- 0 to 2){
      ^PictureMono2:41: error: illegal start of simple expression
}
^PictureMono2:44: error: '<-' expected but ')' found.
  for (i>- 0 to 6){
                 ^PictureMono2:48: error: illegal start of simple expression
} 
^